# conversation-engine

./: .cursorrules  .dockerignore  .env.example  .gitignore  API.md  CLAUDE.md  DONE.md  Dockerfile  Makefile  README.md  RISKS-AND-IMPROVEMENTS.md  RISKS-AND-IMPROVEMENTS.md.bak  docker-compose.yml  pyproject.toml  requirements.txt
.cursor/plans/: prompts_from_db_and_contract_ebf2c730.plan.md
.cursor/rules/: api-documentation-gate.mdc  frontend-patterns.mdc
app/: main.py  settings.py
app/api/: middleware.py  routes.py  schemas.py
app/application/: ports.py  services.py  use_cases.py
app/domain/: __init__.py  entities.py  history.py  model_registry.py  prompt_registry.py  value_objects.py
app/infra/: llm_openai.py  logging.py  migrations.py  prompt_seeder.py
app/infra/persistence/: db.py  models.py  repo_prompt.py  repo_sqlalchemy.py  unit_of_work.py
docs/: features.md  frontend.md  openapi.yml  postman_collection.json
frontend/: .dockerignore  .env.local.example  .gitignore  Dockerfile  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: layout.tsx
frontend/app/admin/: page.tsx
frontend/app/history/: page.tsx
frontend/components/: NavBar.tsx
frontend/components/admin/: DeletePromptDialog.tsx  PromptCard.tsx  PromptDialog.tsx  StatsPanel.tsx
frontend/hooks/: useChatStore.ts  useConversation.ts  useConversationList.ts  useDeleteConversation.ts  useModels.ts  usePrompts.ts  useRenameConversation.ts  useStreamingChat.ts
frontend/lib/: api-client.ts  stream-parser.ts  types.ts  utils.ts
frontend/tests/: setup.ts  utils.tsx
open_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
prompts/: conflict-coach-v1.md  default.md  learn-typescript.md
tests/: conftest.py  test_chat.py  test_health.py  test_history.py  test_integration.py  test_list.py  test_llm.py  test_prompt_repo.py  test_prompt_seeder.py  test_repo.py  test_routes_list.py  test_stream.py
(+32 files in other folders)
